--- a/Python/EDAN95/lab3/EDAN95-Assignment-3/lab_information_theory.ipynb
+++ b/Python/EDAN95/lab3/EDAN95-Assignment-3/lab_information_theory.ipynb
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11a6e3970>"
+       "<matplotlib.legend.Legend at 0x111ca4970>"
       ]
      },
      "execution_count": 2,
@@ -132,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11a8f1c40>"
+       "<matplotlib.legend.Legend at 0x111eb1640>"
       ]
      },
      "execution_count": 3,
@@ -279,18 +279,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9_/bscjnwmn7plg67hpcxl1l6tc0000gn/T/ipykernel_72748/2115919099.py:10: RuntimeWarning: divide by zero encountered in log2\n",
+      "/var/folders/9_/bscjnwmn7plg67hpcxl1l6tc0000gn/T/ipykernel_79514/2115919099.py:10: RuntimeWarning: divide by zero encountered in log2\n",
       "  res = x * np.log(x) + y * np.log2(y) + z * np.log2(z)\n",
-      "/var/folders/9_/bscjnwmn7plg67hpcxl1l6tc0000gn/T/ipykernel_72748/2115919099.py:10: RuntimeWarning: invalid value encountered in log2\n",
+      "/var/folders/9_/bscjnwmn7plg67hpcxl1l6tc0000gn/T/ipykernel_79514/2115919099.py:10: RuntimeWarning: invalid value encountered in log2\n",
       "  res = x * np.log(x) + y * np.log2(y) + z * np.log2(z)\n",
-      "/var/folders/9_/bscjnwmn7plg67hpcxl1l6tc0000gn/T/ipykernel_72748/2115919099.py:10: RuntimeWarning: invalid value encountered in multiply\n",
+      "/var/folders/9_/bscjnwmn7plg67hpcxl1l6tc0000gn/T/ipykernel_79514/2115919099.py:10: RuntimeWarning: invalid value encountered in multiply\n",
       "  res = x * np.log(x) + y * np.log2(y) + z * np.log2(z)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x11ab0c070>"
+       "<matplotlib.colorbar.Colorbar at 0x1120cc160>"
       ]
      },
      "execution_count": 5,
@@ -565,6 +565,7 @@
     "        return entropy\n",
     "\n",
     "    def cross_entropy(self, other) -> float: \n",
+    "        # Measures the difference between two probability distributions for a given random variable. \n",
     "        # Get probabilities for each unique character in self code tree\n",
     "        self_p = {c : self.character_probability(c) for c in self.unique_characters()}\n",
     "        # Get probabilities for each unique character in other code tree\n",
@@ -902,7 +903,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -929,13 +937,13 @@
       "\n",
       "\n",
       "d)\n",
-      "The Huffman code is optimal for a given probability distribution, meaning that it achieves the lowest possible cross entropy for that distribution. This means that test.txt's won Huffman code would be the best encoding (but this also depends on the application, in this case it's best in terms of low bit size and cross entropy.).\n",
+      "The Huffman code is optimal for a given probability distribution, meaning that it achieves the lowest possible cross entropy for that distribution. This means that test.txt's own Huffman code would be the best encoding (but this also depends on the application, in this case it's best in terms of low bit size and cross  entropy).\n",
       "Cross-entropy is a measure of the difference between two probability distributions.\n",
       "Intuitively, cross-entropy can’t be negative because it would imply that the predicted probability distribution is more likely than the true one.\n",
       "\n",
       "\n",
       "e)\n",
-      "Subtract the entropy from the cross-entropy.\n"
+      "Difference between the entropy and cross-entropy.\n"
      ]
     }
    ],
@@ -959,12 +967,12 @@
     "print(\"Most likely because it's based on the same language and the probability distributions of the characters is thus likely more similar.\\n\")\n",
     "\n",
     "print(\"\\nd)\")\n",
-    "print(\"The Huffman code is optimal for a given probability distribution, meaning that it achieves the lowest possible cross entropy for that distribution. This means that test.txt's won Huffman code would be the best encoding (but this also depends on the application, in this case it's best in terms of low bit size and cross entropy.).\")\n",
+    "print(\"The Huffman code is optimal for a given probability distribution, meaning that it achieves the lowest possible cross entropy for that distribution. This means that test.txt's own Huffman code would be the best encoding (but this also depends on the application, in this case it's best in terms of low bit size and cross  entropy).\")\n",
     "print(\"Cross-entropy is a measure of the difference between two probability distributions.\")\n",
     "print(\"Intuitively, cross-entropy can’t be negative because it would imply that the predicted probability distribution is more likely than the true one.\\n\")\n",
     "\n",
     "print(\"\\ne)\")\n",
-    "print(\"Subtract the entropy from the cross-entropy.\")\n",
+    "print(\"Difference between the entropy and cross-entropy.\")\n",
     "# *****************"
    ]
   },
@@ -1745,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -1854,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -1865,7 +1873,7 @@
      "text": [
       "H(V|S): 0.745\n",
       "MI(V;S): 0.217\n",
-      "Knowing their sex helps you more in deciding whether a passenger died or not than knowing their travel class. This is because the mutual information MI(V;S) is higher than the mutual information MI(V;C), which means that the sex of a passenger provides more information about their vitality than the class of a passenger.\n"
+      "Knowing their sex helps you more in deciding whether a passenger died or not than knowing their travel     class. This is because the mutual information MI(V;S) is higher than the mutual information MI(V;C), which means that the sex of a passenger provides more information about their vitality than the class of a       passenger.\n"
      ]
     }
    ],
@@ -1894,10 +1902,17 @@
     "\n",
     "mutual_info = entropy_V - h_v_s\n",
     "print(f\"MI(V;S): {mutual_info:.3f}\")\n",
-    "print(\"Knowing their sex helps you more in deciding whether a passenger died or not than knowing their travel class. This is because the mutual information MI(V;S) is higher than the mutual information MI(V;C), which means that the sex of a passenger provides more information about their vitality than the class of a passenger.\")\n",
+    "print(\"Knowing their sex helps you more in deciding whether a passenger died or not than knowing their travel     class. This is because the mutual information MI(V;S) is higher than the mutual information MI(V;C), which means that the sex of a passenger provides more information about their vitality than the class of a       passenger.\")\n",
     "\n",
     "# *****************"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
